src/objects/External_To_BP_Value_Mapping__mdt.object
<CustomObject>
    <description>This will be used for mapping values defined in BP with some external value received which is not matching with BP value. Ex - BP has Country name as USA but there are chances that we receive US, United States, United States of America from some integration. In such case we will use this metadata to to map them.</description>
    <fields>
        <fullName>BP_Value__c</fullName>
        <description>This is the value we use in BP.</description>
        <inlineHelpText>This is the value we use in BP.</inlineHelpText>
        <label>BP Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Value__c</fullName>
        <description>This is the value received from external system.</description>
        <inlineHelpText>This is the value received from external system.</inlineHelpText>
        <label>External Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External To BP Value Mapping</label>
    <pluralLabel>External To BP Value Mappings</pluralLabel>
</CustomObject>